--- a/Web200/bioSite/Code/biosite-style.css
+++ b/Web200/bioSite/Code/biosite-style.css
@@ -6,3 +6,15 @@ h2 {font-size: 2.441em;}
 h3 {font-size: 1.953em;}
 h4 {font-size: 1.563em;}
 h5 {font-size: 1.25em;}
+.header img {
+    float: left;
+    width: 20%;
+    height: 20%;
+    padding: 60px;
+}
+.header {
+    padding: 60px;
+    text-align: right;
+    background: #1abc9c
+    color: white;
+}
