--- a/Web200/bioSite/Code/biosite-style.css
+++ b/Web200/bioSite/Code/biosite-style.css
@@ -6,15 +6,39 @@ h2 {font-size: 2.441em;}
 h3 {font-size: 1.953em;}
 h4 {font-size: 1.563em;}
 h5 {font-size: 1.25em;}
+/*Fonts and Colors*/
+body {background-color: grey;}
+h1 {
+    text-align: center;
+    color: black;
+    font-family: cursive;
+    font-size: 4em;
+    font-weight: 700;
+    font-style: normal;
+}
+h2 {
+    color: goldenrod;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    margin: 0;
+    padding-top: .5em;
+}
+p {
+    background-color: white;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: normal;
+    line-height: 1.4em;
+}
+/*Header with image, fonts and colors*/
 .header img {
     float: left;
-    width: 20%;
-    height: 20%;
-    padding: 60px;
+    width: 15%;
+    height: 15%;
+    padding: 0px;
 }
 .header {
-    padding: 60px;
-    text-align: right;
-    background: #1abc9c
-    color: white;
+    padding: 40px;
+    background-color: plum;
 }
