--- a/Web200/bioSite/Code/biosite-style.css
+++ b/Web200/bioSite/Code/biosite-style.css
@@ -6,8 +6,8 @@ h2 {font-size: 2.441em;}
 h3 {font-size: 1.953em;}
 h4 {font-size: 1.563em;}
 h5 {font-size: 1.25em;}
-/*Fonts and Colors*/
-body {background-color: grey;}
+/*Fonts and Colors for the site, headings, and paragraphs*/
+body {background-color: #A4ffde}
 h1 {
     text-align: center;
     color: black;
@@ -24,8 +24,7 @@ h2 {
     margin: 0;
     padding-top: .5em;
 }
-p {
-    background-color: white;
+p {    
     color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: normal;
@@ -40,5 +39,53 @@ p {
 }
 .header {
     padding: 40px;
-    background-color: plum;
+    background-color: #dea4ff;
+}
+/*History with image, fonts and colors*/
+.history img{
+    float: right;
+    width 25%;
+    height: 25%;
+    padding: 30px;
+}
+.history {
+    height: 400px;
+    width: 900px;
+    background-color: #ffdea4;
+}
+/*Inspiration with image, fonts and colors*/
+.inspiration img{
+    float: right;
+    width 25%;
+    height: 25%;
+    padding: 30px;
+}
+.inspiration {
+    height: 400px;
+    width: 900px;
+    background-color: #ffdea4;
+}
+/*Hobbies with image, fonts and colors*/
+.hobbies img{
+    float: right;
+    width 25%;
+    height: 25%;
+    padding: 30px;
+}
+.hobbies {
+    height: 400px;
+    width: 900px;
+    background-color: #ffdea4;
+}
+/*Present Day with image, fonts and colors*/
+.present img{
+    float: right;
+    width 25%;
+    height: 25%;
+    padding: 30px;
+}
+.present {
+    height: 400px;
+    width: 900px;
+    background-color: #ffdea4;
 }
