--- a/Web200/bioSite/Code/biosite-style.css
+++ b/Web200/bioSite/Code/biosite-style.css
@@ -82,20 +82,20 @@ p {
     width: 25%;
     padding-left: 20px;
 }
-/* Fake image */
-.leftfakeimg {
-    background-color: #aaa;
-    width: 100%;
-    height: 200px;
-    padding: 20px;
-  }
-  /* Fake image */
-.rightfakeimg {
-    background-color: #aaa;
-    width: 100%;
-    height: 100px;
-    padding: 20px;
-  }
+img.medium {
+    width: 200px;
+    height: 150px;
+}
+img.small {
+    width: 155px;
+    height: 150px;
+}
+/* Image side by side */
+.sidebyside {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
 /* Color, spacing btw element content and boarders for info details */
 .info {
     background-color: #ffdea4;
